plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.13'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.triagain'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // MyBatis
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.5'

    // AWS S3
    implementation platform('software.amazon.awssdk:bom:2.31.3')
    implementation 'software.amazon.awssdk:s3'

    // Swagger UI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

    // Database
    runtimeOnly 'org.postgresql:postgresql'

    // Flyway
    implementation 'org.flywaydb:flyway-core'
    runtimeOnly 'org.flywaydb:flyway-database-postgresql'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly 'com.h2database:h2'

    // Cucumber
    testImplementation 'io.cucumber:cucumber-java:7.17.0'
    testImplementation 'io.cucumber:cucumber-spring:7.17.0'
    testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.17.0'
    testImplementation 'org.junit.platform:junit-platform-suite:1.10.2'

    // REST-Assured
    testImplementation 'io.rest-assured:rest-assured:5.5.0'

    // Testcontainers
    testImplementation platform('org.testcontainers:testcontainers-bom:1.21.3')
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
}

tasks.named('test') {
    useJUnitPlatform {
        excludeTags 'e2e'
    }
}

tasks.register('e2eTest', Test) {
    description = 'E2E 해피패스 테스트만 실행'
    group = 'verification'
    useJUnitPlatform {
        includeTags 'e2e'
        includeEngines 'junit-jupiter'
    }
}
